# RP2040-HUB75-LED-Matrix

./: CMakeLists.txt  LICENSE  README.md
include/: img_array.h
libs/hub75/: hub75.c  hub75.h
pio/: led_matrix.pio
src/: main.c
